@@ -1,3 +1,8 @@
+2001-08-13  Sam Steingold  <sds@gnu.org>
+
+	use unix file utilities and forward slashes with win32gcc
+	* makemake.in (H_DOS): DOS-style filenames and file utilities
+
 2001-08-04  Bruno Haible  <haible@clisp.cons.org>
 
 	* eval.d (check_for_illegal_keywords): Don't signal an error for
